# routes/web.php
@@ -65,7 +65,8 @@ $router->delete('books/{bookId}/image/{imageId}', 'Book\\ImageController@deleteI
 
 $router->get('rooms', 'Chat\\ChatController@getRooms');
 $router->get('rooms/{roomId}/messages', 'Chat\\ChatController@getMessages');
-$router->post('rooms/{advertiserId}/w/{buyerId}', 'Chat\\ChatController@storeMessage');
+$router->post('rooms/{advertiserId}/w/{buyerId}', 'Chat\\ChatController@postChatAndMessage');
+$router->post('rooms/{roomId}/messages', 'Chat\\ChatController@sendMessage');
 
 $router->get('reports', 'Report\\ReportController@getReports');
 $router->get('reports/status', 'Report\\StatusController@getStatus');
